# MyScene

./: .gitignore  CMakeLists.txt  README.md
config/: Config.cmake.in
include/MyScene/: MyScene  MyScene.h  core.h  tool.h
include/MyScene/Components/: Children.h  Components.h  LocalToParent.h  LocalToWorld.h  NonUniformScale.h  Parent.h  Rotation.h  RotationEuler.h  Scale.h  Translation.h  WorldToLocal.h
include/MyScene/Systems/: LocalToParentSystem.h  ParentSystem.h  RotationEulerSystem.h  Systems.h  TRSToLocalToParentSystem.h  TRSToLocalToPraentSystem.h  TRSToLocalToWorldSystem.h  WorldToLocalSystem.h
include/MyScene/core/: Component.h  ReflAttrs.h  ResourceMngr.h  SObj.h  Scene.h  Transform.h  core
include/MyScene/core/Cmpt/: Camera.h  Component.h  Geometry.h  L2W.h  Light.h  Material.h  Position.h  Root.h  Rotation.h  SObjPtr.h  Scale.h  Transform.h
include/MyScene/core/Cmpt/detail/: Dirty.h
include/MyScene/core/Light/: AreaLight.h  DirLight.h  EnvLight.h  Light.h  PointLight.h
include/MyScene/core/Material/: Diffuse.h  Image.h  Material.h  Texture2D.h  stdBRDF.h
include/MyScene/core/Primitive/: Plane.h  Primitive.h  Sphere.h  Square.h  TriMesh.h  Triangle.h
include/MyScene/core/Resource/: Image.h  ResourceMngr.h
include/MyScene/core/detail/: Dirty.h  SObj.inl  Scene.inl  SystemMngr.h  SystemMngr.inl
include/MyScene/tool/: SceneReflectionInit.h  tool
include/MyScene/tool/Accel/: BVH.h  LinearBVHNode.h
include/MyScene/tool/Accel/detail/: PrimitiveGetter .h
include/MyScene/tool/Intersector/: IntersectorClosest.h  IntersectorClostest.h  IntersectorVisibility.h
include/MyScene/tool/Serializer/: DeserializerJSON.h  IDeserializer.h  ISerializer.h  MyJsonWriter.h  SerializerJSON.h
include/MyScene/tool/Serializer/detail/: SerializerJSON.inl
include/MyScene/tool/detail/: ResourceMngr.inl
include/MyScene/tool/serialize/: DeserializerJSON.h  SerializerJSON.h  Serializer_Json.h
include/MyScene/tool/serialize/detail/: SerializerJSON.inl  Serializer_Json.inl
src/EMPTY/: CMakeLists.txt  EMPTY.cpp
src/core/: CMakeLists.txt  LocalToParentSystem.cpp  RotationEulerSystem.cpp  SObj.cpp  Scene.cpp  TRSToLocalToParentSystem.cpp  TRSToLocalToPraentSystem.cpp  TRSToLocalToWorldSystem.cpp  Transform.cpp  WorldToLocalSystem.cpp
src/core/Cmpt/: Camera.cpp  Geometry.cpp  L2W.cpp  Light.cpp  Material.cpp  Position.cpp  Root.cpp  Rotation.cpp  SObjPtr.cpp  Scale.cpp  Transform.cpp
src/core/Light/: AreaLight.cpp  DirLight.cpp  EnvLight.cpp  PointLight.cpp
src/core/Material/: Image.cpp  Texture2D.cpp  stdBRDF.cpp
src/core/Primitive/: Sphere.cpp  Square.cpp  TriMesh.cpp  Triangle.cpp
src/core/detail/: SystemMngr.cpp
src/parser/: CMakeLists.txt  main.cpp
src/test/00_basic/:  main.cpp
src/test/01_hierarchy/: CMakeLists.txt  main.cpp
src/test/01_scene/: main.cpp
src/test/02_reflection/: main.cpp
src/test/03_serialize/: CMakeLists.txt  main.cpp
src/test/04_deserialize/: main.cpp
src/test/05_visibility/: main.cpp
src/test/06_clostest/: main.cpp
src/tool/: CMakeLists.txt  DeserializerJSON.cpp  SceneReflectionInit.cpp  SerializerJSON.cpp  Serializer_Json.cpp
src/tool/Accel/: BVH.cpp  BVHNode.cpp  BVHNode.h  LinearBVHNode.cpp  PrimitiveGetter.cpp
src/tool/Intersector/: IntersectorClosest.cpp  IntersectorClostest.cpp  IntersectorVisibility.cpp
src/tool/Serializer/: DeserializerJSON.cpp  SerializerJSON.cpp  UJsonWriter.cpp
src/tool/serialize/: DeserializerJSON.cpp  SerializerJSON.cpp  UJsonWriter.cpp
